--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "email": "pedro.silva4720@gmail.com"
   },
   "scripts": {
+    "status": "git status",
+    "ad": "git add",
     "commit": "cz",
     "start": "react-scripts start"
   },
