--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^0.27.2",
+    "chroma-js": "^2.4.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
