--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "chroma-js": "^2.4.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.0.5",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "commitizen": "^4.2.4",
