--- a/package.json
+++ b/package.json
@@ -28,16 +28,17 @@
   },
   "type": "module",
   "dependencies": {
+    "@stitches/react": "^1.2.8",
     "axios": "^0.27.2",
     "chroma-js": "^2.4.2",
     "next": "^12.2.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-markdown": "^8.0.3",
-    "react-toastify": "^9.0.5",
-    "styled-components": "^5.3.5"
+    "react-toastify": "^9.0.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.8",
     "babel-plugin-module-resolver": "^4.1.0",
     "commitizen": "^4.2.4",
     "dotenv": "^16.0.1",
